--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <div class="container">
         <center>
             <h1>Siddharth Gundeti</h1>
+            <h4>Welcome to my Page</h4>
+            <br>
+            <br>
+            <p>Thanks for visiting...GetLost!!</p>
         </center>
     </div>
 </body>
