--- a/lights/index.html
+++ b/lights/index.html
@@ -5,7 +5,7 @@
 <meta content="width=device-width,height=device-height,inital-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-<title>Kerala - All about kerala and me - www.kerala.me</title>
+<title>Happy Christmas & Happy New year</title>
 <style type="text/css">
 html,body{height:100%;margin:0;padding:0}
 ul,li{text-indent:0;text-decoration:none;margin:0;padding:0}
