Education Section Empty

--- a/index.html
+++ b/index.html
@@ -150,19 +150,16 @@
          </div>
 
          <div class="nine columns main-col">
-
+             
             <div class="row item">
 
                <div class="twelve columns" style="width:780px;">
 
-                  <h3>Guru Nanak Institute of Technical Campus,Hyderabad</h3>
-                  <p class="info">Bachelor's in Computer Science and Engineering <span>&bull;</span> <em class="date">June 2016</em></p>
+<!--                  <h3>Guru Nanak Institute of Technical Campus,Hyderabad</h3>-->
+<!--                  <p class="info">Bachelor's in Computer Science and Engineering <span>&bull;</span> <em class="date">June 2016</em></p>-->
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                  Stay Tuned...
                   </p>
 
                </div>
@@ -174,11 +171,13 @@
                <div class="twelve columns">
 
                   <h3>Indian School of Mines, Dhanbad</h3>
-                  <p class="info">Bachelor's in Computer Science and Engineering<span>&bull;</span> <em class="date">May 2012</em></p>
+<!--                  <p class="info">Bachelor's in Computer Science and Engineering<span>&bull;</span> <em class="date">May 2012</em></p>-->
 
+<!--
                   <p>
                       Discontinued...
                   </p>
+-->
 
                </div>
 
